# puzzled

./: .hlint.yaml  props.cabal
CabalProject/: README.md
CabalProject/app/: Main.hs
StackProject/: CHANGELOG.md  README.md  StackProject.cabal  package.yaml
StackProject/app/: BaseVarMonad.hs  BaseVarMonadRenamed.hs  ConstrainedMonad.hs  DTC.hs  FNCDVarMonad.hs  Lambda.hs  LambdaVarMonad.hs  Lattice.hs  NewConstrDefVarMonad.hs  Propagator.hs  RunFNCDVarMonad.hs  VarMonads.hs  VarMonadsReflection.hs
StackProject/app/DTCFunctions/: BakeContext.hs  SwitchContext.hs
StackProject/app/Experiments/: LambdaCalc.hs
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
source/Control/Category/: Eq.hs  Hierarchy.hs  Lifted.hs  Product.hs  Propagate.hs  Reify.hs
source/Control/Monad/: Branch.hs
source/Data/Constraint/: Extra.hs  List.hs
source/Data/Monoid/: JoinSemilattice.hs
source/Data/Primitive/MutVar/: Rollback.hs
source/Propagator/: Cell.hs  Execute.hs
tests/Data/Monoid/: JoinSemilatticeTest.hs
tests/Propagator/: ExecuteTest.hs
