cabal-version: 3.0
name: puzzled
version: 0.1.0.0
license: MIT

library
  exposed-modules:
    Control.Category.Hierarchy
    Control.Category.Product
    Control.Category.Propagate
    Control.Category.Reify
  build-depends:
    , base
  default-language: GHC2021
  ghc-options: -Wall -Wextra
  hs-source-dirs: source
