cabal-version: 3.0
name: puzzled
version: 0.1.0.0
license: MIT

library
  exposed-modules:
    Control.Category.Eq
    Control.Category.Hierarchy
    Control.Category.Product
    Control.Category.Propagate
    Control.Category.Reify
    Control.Monad.Branch
    Data.Constraint.List
    Data.Monoid.JoinSemilattice
    Data.Primitive.MutVar.Rollback
    Propagator.Execute
  build-depends:
    , base
    , containers
    , logict
    , primitive
    , transformers
  default-language: GHC2021
  ghc-options: -Wall -Wextra
  hs-source-dirs: source

test-suite puzzled-tests
  default-language: GHC2021
  type: exitcode-stdio-1.0
  ghc-options: -Wall -Wextra
  hs-source-dirs: tests
  main-is: Driver.hs
  build-depends:
    , base
    , containers
    , hedgehog
    , hspec
    , logict
    , primitive
    , puzzled
    , tasty
    , tasty-hedgehog
    , tasty-hspec
  build-tool-depends:
    tasty-discover:tasty-discover
  other-modules:
    Data.Monoid.JoinSemilatticeTest
    Propagator.ExecuteTest
